fix style problems

--- a/index.html
+++ b/index.html
@@ -27,34 +27,23 @@
 
 <main>
     <div id="Bio" class="tabcontent">
-        <div class="content">
-            <a style="text-decoration: none; color: white;">
-                <div class="box">
-                    <h2>About Me</h2>
-                    <p>I am a happy programmer, AI enthusiastic, with a PhD in condensed matter physics, 
-                        currently located in Shanghai. I was working in the semiconductor industry as a
-                        researcher and developer for about a year. I have been studying and working in 
-                        many places around the world and I am actively seeking for job opportunities in 
-                        North America, Europe and Australia. </p>
-                </div>
-            </a>
-        </div>
+        <iframe class="content" src="about.html" style="width: 100%; border: none;"></iframe>
     </div>
 
     <div id="Blogs" class="tabcontent">
-        <iframe id="content" src="posts.html" style="width: 100%; border: none;"></iframe>
+        <iframe class="content" src="posts.html" style="width: 100%; border: none;"></iframe>
     </div>
     
     <div id="Publications" class="tabcontent">
-        <iframe id="content" src="publications.html" style="width: 100%; border: none;"></iframe>
+        <iframe class="content" src="publications.html" style="width: 100%; border: none;"></iframe>
     </div>
 
     <div id="Projects" class="tabcontent">
-        <iframe id="content" src="projects.html" style="width: 100%; border: none;"></iframe>
+        <iframe class="content" src="projects.html" style="width: 100%; border: none;"></iframe>
     </div>
 
     <div id="Fun" class="tabcontent">
-        <iframe id="content" src="fun.html" style="width: 100%; border: none;"></iframe>
+        <iframe class="content" src="fun.html" style="width: 100%; border: none;"></iframe>
     </div>
 
     <div id="Contact" class="tabcontent">
