--- a/posts.html
+++ b/posts.html
@@ -26,8 +26,8 @@
         </div>
     </div>
     <div id="go-back-button" class="markdown-header"></div>
-    <div id="container">
-        <div id="content"></div>
+    <div class="container">
+        <div class="content" id="post-list"></div>
         </div>
         <div id="post-content" class="markdown-body">
         </div>
