--- a/bloch.html
+++ b/bloch.html
@@ -27,7 +27,7 @@
 			<!-- Add more qubit controls as needed -->
 		</div>
 		<div id="frame" style="width: 600px; height: 400px; border: 2px solid #000; margin: auto;">
-			<div id="container"></div>
+			<div class="container"></div>
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/mathjs@11.8.0/lib/browser/math.js"></script>
 		<script type="importmap">
