--- a/kmc.html
+++ b/kmc.html
@@ -22,7 +22,7 @@
 	</head>
 	<body>
 
-		<div id="container"></div>
+		<div class="container"></div>
 		<script type="module">
             import Two from 'https://cdn.skypack.dev/two.js@latest';
             import KDBush from 'https://cdn.jsdelivr.net/npm/kdbush/+esm';
