fix style problem 2

--- a/fun.html
+++ b/fun.html
@@ -27,10 +27,10 @@
             <p>You need a desktop display to view the visualization.</p>
             
             <div class="box" style="color: rgb(44, 151, 252);">
-                <a href="bloch.html" style="text-decoration: none; color: inherit;">
+                <a href="bloch.html" target="_blank" style="text-decoration: none; color: inherit;">
                     <h3>Traces on Bloch Sphere</h3>
                     <p>To visualize the operator defined in 
-                        <a href="https://arxiv.org/pdf/2105.02859" 
+                        <a href="https://arxiv.org/pdf/2105.02859" target="_blank" 
                             style="text-decoration: none; color: rgb(0, 225, 255);">
                             A Grand Unification of Quantum Algorithms [2105.02859]
                         </a>
@@ -41,7 +41,7 @@
             </div>
 
             <div class="box" style="color: cyan;">
-                <a href="ion.html" style="text-decoration: none; color: inherit;">
+                <a href="ion.html" target="_blank" style="text-decoration: none; color: inherit;">
                     <h3>Molecular dynamics simulation of ion implantation</h3>
                     <p>A visualization of 10,000 ions implanted into a simple cubic crystal using molecular dynamics simulation. 
                         The simulation traces ion trajectories and energy exchange in semiconductor device fabrication processes.</p>
@@ -50,7 +50,7 @@
             </div>
 
             <div class="box" style="color: violet;">
-                <a href="skyrmion.html" style="text-decoration: none; color: inherit;">
+                <a href="skyrmion.html"  target="_blank" style="text-decoration: none; color: inherit;">
                     <h3>LLG equation simulation with skyrmions</h3>
                     <p>Animation demonstrating the evolution of skyrmion pairs in a ferromagnet using the Landau-Lifshitz-Gilbert equation. 
                         Features proper handling of magnetization vector normalization constraints.</p>
@@ -59,7 +59,7 @@
             </div>
 
             <div class="box" style="color: yellow;">
-                <a href="kmc.html" style="text-decoration: none; color: inherit;">
+                <a href="kmc.html"  target="_blank" style="text-decoration: none; color: inherit;">
                     <h3>Kinetic Monte-Carlo diffusion simulation</h3>
                     <p>Event-based simulation of particle diffusion on a 2D honeycomb lattice using Kinetic Monte-Carlo methods. 
                         Demonstrates diffusion dynamics through site occupation states and hopping rules.</p>
@@ -68,7 +68,7 @@
             </div>
 
             <div class="box" style="color: lightgreen;">
-                <a href="wire.html" style="text-decoration: none; color: inherit;">
+                <a href="wire.html"  target="_blank" style="text-decoration: none; color: inherit;">
                     <h3>Wire configuration optimization</h3>
                     <p>Simulated annealing algorithm for optimizing L-shaped wire configurations with collision avoidance. 
                         Solves real-world assembly problems by finding optimal wire arrangements under physical constraints.</p>
@@ -77,9 +77,7 @@
             </div>
 
             <div class="box" style="color: lightgrey;">
-                <a href="#" style="text-decoration: none; color: inherit;">
-                    <h3>More topics are coming soon ...</h3>
-                </a>
+                <h3>More topics are coming soon ...</h3>
             </div>
         </div>
     </div>
