--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
 <body>
 <header>
     <div class="content">
-        <h1>Yunlong's Homepage</h1>
     </div>
 </header>
 <nav>
     <div class="box">
         <div class="tab">
             <button class="tablinks" onclick="openTab(event, 'Bio')">Bio</button>
-            <button class="tablinks" onclick="openTab(event, 'Publications')">Publications</button>
             <button class="tablinks" onclick="openTab(event, 'Projects')">Projects</button>
             <button class="tablinks" onclick="openTab(event, 'Fun')">Fun</button>
             <button class="tablinks" onclick="openTab(event, 'Blogs')">Blogs</button>
+            <button class="tablinks" onclick="openTab(event, 'Publications')">Publications</button>
             <button class="tablinks" onclick="openTab(event, 'Contact')">Contact</button>
         </div>
     </div>
@@ -48,13 +47,13 @@
 
     <div id="Contact" class="tabcontent">
         <div class="content">
-            <a href="https://github.com/algorithmx/" style="text-decoration: none; color: rgb(141, 239, 223);">
+            <a href="https://github.com/algorithmx/" target="_blank" style="text-decoration: none; color: rgb(141, 239, 223);">
                 <div class="box">
                     <h2>GitHub</h2>
                     <p>github.com/algorithmx</p>
                 </div>
             </a>
-            <a href="mailto:yunlong.lian@proton.me" style="text-decoration: none; color: lightgreen;">
+            <a href="mailto:yunlong.lian@proton.me"  target="_blank" style="text-decoration: none; color: lightgreen;">
                 <div class="box">
                     <h2>Contact</h2>
                     <p>Email: yunlong.lian@proton.me</p>
@@ -64,8 +63,6 @@
     </div>
 </main>
 <footer>
-    <p>Yunlong Lian</p>
-    <p>
 </footer>
 <script src="script.js"></script>
 </body>
