--- a/projects.html
+++ b/projects.html
@@ -16,11 +16,11 @@
             <p>Here is a list of projects I am currently working on.</p>
 
             <div class="box" style="color: rgb(70, 146, 252);">
-                <a href="stock-price-viewer.html" style="text-decoration: none; color: inherit;">
+                <a href="stock-price-viewer.html"  target="_blank" style="text-decoration: none; color: inherit;">
                     <h3>Stock price viewer</h3>
                     <p>A React component for candlestick diagram of stock price data. 
                         Still in progress. GitHub repository is 
-                        <a href="https://github.com/algorithmx/stock-price-viewer" 
+                        <a href="https://github.com/algorithmx/stock-price-viewer"  target="_blank" 
                             style="text-decoration: none; color: rgb(0, 225, 255);">
                             available here
                         </a>.
@@ -30,7 +30,7 @@
             </div>
 
             <div class="box" style="color: rgb(0, 255, 98);">
-                <a href="PythonConsole.html" style="text-decoration: none; color: inherit;">
+                <a href="PythonConsole.html"  target="_blank" style="text-decoration: none; color: inherit;">
                     <h3>Python console</h3>
                     <p>A simple Python console running entirely within the browser. 
                         When loaded, it can run offline. 
@@ -41,7 +41,7 @@
             </div>
 
             <div class="box" style="color: rgb(187, 255, 0);">
-                <a href="https://github.com/algorithmx/SimulationWorkbench" style="text-decoration: none; color: inherit;">
+                <a href="https://github.com/algorithmx/SimulationWorkbench"  target="_blank" style="text-decoration: none; color: inherit;">
                     <h3>Simulation workbench</h3>
                     <p>A typical simulation project can be modelled as a chain of steps, where each step is
                         a call to a particular simulation tool. Usually the project contains many simulations 
