--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <nav>
     <div class="box">
         <div class="tab">
-            <button class="tablinks" onclick="openTab(event, 'Bio')">Bio</button>
-            <button class="tablinks" onclick="openTab(event, 'Projects')">Projects</button>
-            <button class="tablinks" onclick="openTab(event, 'Fun')">Fun</button>
-            <button class="tablinks" onclick="openTab(event, 'Blogs')">Blogs</button>
-            <button class="tablinks" onclick="openTab(event, 'Publications')">Publications</button>
-            <button class="tablinks" onclick="openTab(event, 'Contact')">Contact</button>
+            <button class="tablinks" onclick="openTab(event, 'Bio')"><h2>Bio</h2></button>
+            <button class="tablinks" onclick="openTab(event, 'Projects')"><h2>Projects</h2></button>
+            <button class="tablinks" onclick="openTab(event, 'Fun')"><h2>Fun</h2></button>
+            <button class="tablinks" onclick="openTab(event, 'Blogs')"><h2>Blogs</h2></button>
+            <button class="tablinks" onclick="openTab(event, 'Publications')"><h2>Publications</h2></button>
+            <button class="tablinks" onclick="openTab(event, 'Contact')"><h2>Contact</h2></button>
         </div>
     </div>
 </nav>
