--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="content">
-            <h2>About Me</h2>
+            <h2 class="glow">About Me</h2>
             <p>I am a happy programmer, AI enthusiastic, with a PhD in condensed matter physics, 
                 currently located in Shanghai. I was working in the semiconductor industry as a
                 researcher and developer for about a year. I have been studying and working in 
