--- a/fun.html
+++ b/fun.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="content">
-            <h2>Fun Projects</h2>
+            <h2 class="glow">Fun Projects</h2>
             <p>Below is a list of topics or projects I have been involved or I am interested. 
                 Given my frequent engagement in simulation projects, I have cultivated a 
                 'visual debugging' methodology. where I highly prioritize the visualization 
