--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="content">
-            <h2>Active Projects</h2>
+            <h2 class="glow">Active Projects</h2>
             <p>Here is a list of projects I am currently working on.</p>
 
             <div class="box" style="color: rgb(70, 146, 252);">
