--- a/publications.html
+++ b/publications.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="content">
-            <h2>Publications</h2>
+            <h2 class="glow">Publications</h2>
             <a href="https://theses.hal.science/tel-01894003/"  target="_blank" style="text-decoration: none; color: rgb(205, 239, 141);">
                 <div class="box">
                     <p>Skyrmions in quantum Hall systems (PhD thesis)</p>
