update course work

--- a/coursework/IBMHtmlCssJavascriptIntro/exercise.html
+++ b/coursework/IBMHtmlCssJavascriptIntro/exercise.html
@@ -55,6 +55,7 @@
         .nav-links a:hover {
             color: hsl(220, 100%, 56%);
             font-weight: bold;
+            text-decoration: underline;
         }
 
         .container {
@@ -343,10 +344,9 @@
             <div class="hero-content">
                 <h2>Hi, I'm Jimmy Hua! 👋</h2>
                 <p>
-                    I am a full stack developer with 2 years of <strong>blinking</strong> experience in both application
-                    and presentation layers. I have worked on applications and microservices
-                    deployed on IBM Cloud. I am an avid user of IBM Watson Services and have
-                    worked on Watson Assistant, NLU, Sentiment analyzer to name a few.
+                    I am a beginner developer with 1 month of <strong>blinking</strong> experience 
+                    in both application and presentation layers. I have worked on applications and 
+                    microservices. I am an avid user of x.ai LLM and have worked on a chatbot.
                 </p>
             </div>
         </div>
@@ -367,24 +367,19 @@
                     <p>1.5 years experience</p>
                 </div>
                 <div class="skill-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/3/30/Java_programming_language_logo.svg/120px-Java_programming_language_logo.svg.png" alt="Java"/>
-                    <h3>Java</h3>
+                    <img src="https://www.scala-lang.org/resources/img/frontpage/scala-spiral.png" alt="Scala"/>
+                    <h3>Scala</h3>
                     <p>.5 years experience</p>
                 </div>
                 <div class="skill-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/120px-React-icon.svg.png" alt="React"/>
-                    <h3>React</h3>
+                    <img src="https://spring.io/img/spring.svg" alt="Spring Boot"/>
+                    <h3>Spring Boot</h3>
                     <p>1 year experience</p>
                 </div>
                 <div class="skill-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Node.js_logo.svg/120px-Node.js_logo.svg.png" alt="Node.js"/>
-                    <h3>Node.js</h3>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/Amazon_Web_Services_Logo.svg/120px-Amazon_Web_Services_Logo.svg.png" alt="AWS"/>
+                    <h3>AWS Cloud</h3>
                     <p>1 year experience</p>
-                </div>
-                <div class="skill-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/CSS3_logo_and_wordmark.svg/120px-CSS3_logo_and_wordmark.svg.png" alt="CSS"/>
-                    <h3>CSS</h3>
-                    <p>2 years experience</p>
                 </div>
             </div>
         </div>
@@ -394,16 +389,16 @@
         <div class="container">
             <h2 class="section-title">Projects</h2>
             <div class="project-item">
-                <h3>Chatbot</h3>
-                <p>Developed a secure website integrated with chatbot for an automobile client using HTML, CSS, JavaScript and IBM Watson Assistant</p>
+                <h3>Content Management System</h3>
+                <p>Developed a content management system for a client using HTML, CSS, JavaScript, and Spring Boot</p>
             </div>
             <div class="project-item">
-                <h3>Sentiment Analyzer</h3>
-                <p>Developed and deployed a sentiment analyzer for the box reviews section of an eCommerce platform using IBM NLU</p>
+                <h3>LLM Chatbot</h3>
+                <p>Developed a chatbot using x.ai LLM API and JavaScript.</p>
             </div>
             <div class="project-item">
-                <h3>Fashion Website</h3>
-                <p>Created a styled multi-page website for a new player in the fashion industry and integrated it with a shopping cart, using stripe for payment gateway</p>
+                <h3>Mindmap Website</h3>
+                <p>Created a mindmap website using HTML, CSS, and JavaScript.</p>
             </div>
         </div>
     </section>
@@ -413,10 +408,10 @@
             <h2 class="section-title">Recommendations</h2>
             <div class="recommendations-grid">
                 <div class="recommendation-card">
-                    <p>"Jimmy Hua is a very quick learner and quickly grasps key concepts of Web development. He got a great attitude & He is an excellent team player. He has a curious mind and asks the right question. He takes initiative within a team and has potentials to lead the team."</p>
+                    <p>"Jimmy Hua is a very blinking learner and quickly grasps key concepts of Web development. He got a great attitude & He is an excellent team player. He has a curious mind and asks the right question. He takes initiative within a team and has potentials to lead the team."</p>
                 </div>
                 <div class="recommendation-card">
-                    <p>"Working with Jimmy Hua has been an awesome experience. He is highly knowledgeable and always goes the extra step to make sure everything is right. For any future projects that need him expertise I would definitely want to work with him again."</p>
+                    <p>"Working with Jimmy Hua has been an awesome experience. He is highly blinking and always goes the extra step to make sure everything is right. For any future projects that need him expertise I would definitely want to work with him again."</p>
                 </div>
                 <div class="recommendation-card">
                     <p>"I had worked along with Jimmy Hua during the initial phase of our venture which needed Web development. He is a committed resource who has in depth knowledge about the domain. He will be an asset for any organisation!"</p>
