modify about page

--- a/about.html
+++ b/about.html
@@ -19,6 +19,11 @@
                 many places around the world and I am actively seeking for job opportunities in 
                 North America, Europe and Australia. </p>
         </div>
+        <div class="content"></div>
+            <h2 class="glow">About This Site</h2>
+            <p>This site contains presentations of my own works, blog posts of my thoughts, 
+                as well as many good blog post from the internet. </p>
+        </div>
     </div>
 </body>
 </html>
