--- a/coursework/IBMReact/index.html
+++ b/coursework/IBMReact/index.html
@@ -7,7 +7,7 @@
     <title>E-Plant</title>
     <meta name="keywords" content="Vite, React, plants, gardening, Air Purifying Plants, Aromatic Fragrant Plants, Insect Repellent Plants, Medicinal Plants, Low Maintenance Plants" /> <!-- Add meta keywords here -->
 
-    <script type="module" crossorigin src="index-Dm-Dm4Uf.js"></script>
+    <script type="module" crossorigin src="index-CJD1YmHh.js"></script>
     <link rel="stylesheet" crossorigin href="index-Fo-VVEgF.css">
   </head>
   <body>
